--- a/src/app/gifs/components/home-pages/home-pages.component.html
+++ b/src/app/gifs/components/home-pages/home-pages.component.html
@@ -9,7 +9,8 @@
   <div class="col-12 pt-2">
     <!-- lista de gifs -->
     <!--card-list-->
-    <gifs-card-list></gifs-card-list>
+    <gifs-card-list [gifs]="gifs"></gifs-card-list>
+
   </div>
 
 </div>
